--- a/styles.css
+++ b/styles.css
@@ -33,14 +33,18 @@ header h1{
 
 section{
 
-    width: auto;
-    height: 100vh;
+    width: 100%;
+    height: 100%;
 }
+
 
 .container {  
   
-    width: 100%;
-    height: auto;
+    display: grid;
+    width: 100vw;
+    grid-template-columns: 1fr 1fr 1fr;
+    flex-wrap: wrap;
+    justify-items: center;
 
       
   }
@@ -50,4 +54,38 @@ section{
       height: 350px;
       background-color: #fff;
       border-radius: 14px;
+      margin-top: 80px;
+      transition: all 0.5s;
+      box-shadow: -2px 8px 14px 2px rgba(0,0,0,0.51); 
+      background: rgb(65,166,60);
+background: linear-gradient(173deg, rgba(65,166,60,0.5) 0%, rgba(166,144,147,0.5) 100%);
+
+      
+  }
+
+.card-preview{
+
+    width: 220px;
+    height: 125px;
+    margin: auto;
+  }
+
+  .card-preview iframe{
+
+    width: 100%;
+    height: auto;
+    margin-top: 10px;
+    border-radius: 20px;
+  }
+
+  .card-info{
+
+    margin-top: 40px;
+
+    text-align: center;
+  }
+
+  .card:hover{
+
+    transform: scale(1.1);
   }
