--- a/styles.css
+++ b/styles.css
@@ -12,7 +12,7 @@
 
 body{
 
-    background-color: var(--main-color);
+    /* background-color: var(--main-color); */
     font-family: 'Poppins';
     
 }
@@ -33,16 +33,16 @@ header h1{
 
 section{
 
-    width: 100%;
+    width: 80%;
     height: 100%;
+    margin: auto;
 }
 
 
 .container {  
   
-    display: grid;
-    width: 100vw;
-    grid-template-columns: 1fr 1fr 1fr;
+    display: flex;
+    width: auto;
     flex-wrap: wrap;
     justify-items: center;
 
@@ -54,7 +54,7 @@ section{
       height: 350px;
       background-color: #fff;
       border-radius: 14px;
-      margin-top: 80px;
+      margin: 80px auto;
       transition: all 0.5s;
       box-shadow: -2px 8px 14px 2px rgba(0,0,0,0.51); 
       background: rgb(65,166,60);
@@ -64,28 +64,57 @@ background: linear-gradient(173deg, rgba(65,166,60,0.5) 0%, rgba(166,144,147,0.5
   }
 
 .card-preview{
-
+  display: flex;
     width: 220px;
     height: 125px;
     margin: auto;
   }
 
-  .card-preview iframe{
+  .card-preview .iframe{
 
-    width: 100%;
+    width: 150px;
     height: auto;
-    margin-top: 10px;
+    margin-right: 30px;
     border-radius: 20px;
   }
 
   .card-info{
 
-    margin-top: 40px;
+   
 
     text-align: center;
   }
 
+  .card-info h1{
+
+    color: #fff;
+    font-size: 15px;
+    margin-top: -20px;
+  }
+
+ .type{
+
+  text-decoration: underline #1267F0;
+ }
+
+
+ .Genre {
+
+    text-decoration: underline blue;
+
+ }
+
   .card:hover{
 
     transform: scale(1.1);
+  }
+
+  @media screen and (max-width: 1000px){
+
+    .card{
+
+
+      display: block;
+    }
+    
   }
