--- a/styles.css
+++ b/styles.css
@@ -64,32 +64,40 @@ background: linear-gradient(173deg, rgba(65,166,60,0.5) 0%, rgba(166,144,147,0.5
   }
 
 .card-preview{
-  display: flex;
+  display: block;
     width: 220px;
-    height: 125px;
+    height: 150px;
     margin: auto;
+    align-content: center;
+    justify-content: center;
   }
 
   .card-preview .iframe{
 
     width: 150px;
-    height: auto;
-    margin-right: 30px;
+    height: 100%;
     border-radius: 20px;
+    margin: 0px 30px;
   }
 
   .card-info{
 
    
-
+    display : block;
     text-align: center;
   }
 
   .card-info h1{
 
     color: #fff;
-    font-size: 15px;
+    font-size: 18px;
+   
+  }
+
+  .card-info h2{
+
     margin-top: -20px;
+    font-size: 13px;
   }
 
  .type{
